# Object-repositioning

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  README.txt  cmake_install.cmake  object_repositioning  test_opencv
src/: BoundingBox.cpp  BoundingBox.hpp  Color.cpp  Color.hpp  Depth.cpp  Depth.hpp  GMM.cpp  GMM.hpp  MeanShift.cpp  MeanShift.h  Point.hpp  PolygonalChain.hpp  Superpixel.cpp  Superpixel.hpp  block.h  foreground_extraction.cpp  foreground_extraction.hpp  graph.cpp  graph.h  instances.inc  main.cpp  maxflow.cpp  opencv_2_sdl.cpp  opencv_2_sdl.hpp
